# optim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  go.mod  greeks.go  greeks_test.go  least_squares.go  least_squares_test.go  var_historical.go  var_historical_test.go  var_monte_carlo.go  var_monte_carlo_test.go  var_parametric.go  var_parametric_test.go
benchmarks/: CMakeLists.txt  bench_framework.c  bench_framework.h  bench_greeks.c  bench_least_squares.c  bench_main.c  bench_optim.c  bench_var_historical.c  bench_var_monte_carlo.c  bench_var_parametric.c
cmake/: DetectSIMD.cmake  finkit-sortConfig.cmake.in  sanitizers.cmake
include/: least_squares.h  var_historical.h  var_monte_carlo.h  var_parametric.h
installed-headers/: arena.h  argsort.h  bloom_filter.h  correlated.h  cummax.h  cumsum.h  decompose.h  ds.h  erf.h  exp.h  fc_bigfloat.h  fc_bigint.h  float_sort.h  gemm.h  gemv.h  generic_ring_buffer.h  greeks.h  int_sort.h  least_squares.h  log.h  matrix.h  matrix_internal.h  mem_aligned.h  mem_pool.h  multikey.h  normal.h  normal_inv.h  normal_rng.h  pow.h  ring_buffer.h  roaring_bitmap.h  simd_detect.h  solve.h  spsc.h  spsc_layout.h  spsc_shm.h  sqrt.h  topk.h  transpose.h  tridiag.h  (+3 more)
scripts/: coverage.sh  merge_libs.sh  run_benchmarks.sh  test_coverage.sh
tests/: CMakeLists.txt  test_framework.c  test_framework.h  test_greeks.c  test_least_squares.c  test_main.c  test_optim.c  test_var_historical.c  test_var_monte_carlo.c  test_var_parametric.c
